                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2020-10-09
 * Exposed "scroll_to_id" prop on wing-pagination component. Pagination defaults to scrolling up to "app". If you want something else specify it here.
 * Minor refactoring of ideas system.
 * Converted ideas templates to Vue.
 * Added slot called "above-add-comment" to wing.vue.js <comments> component.

2020-10-08
 * Exposed Wing::Util::commify() to Wing::Template.
 * wing.vue.js markdown-editor component exposes a default slot so you can place content below the editor.

2020-10-05
 * In wing.vue.js added set_fetch_api() on wing.object.

2020-10-01
 * Made the algolia search code a bit more elegant to make it easier to implement their recommended retry strategy.
 * Wing::Algolia has been updated to cycle through 4 different URLs for redundancy.
 * Wing::Rest generate_relationship with named_options "queryable" now does a full wildcard search again.
 * Wrote the documentation for Wing::Util.
 * Added Wing::Role::Result::Trigram and associated utilities to enable fast substring searching in large tables.
 * Fixed: Can't use an undefined value as an ARRAY reference at /data/Wing/lib/Wing/Rest.pm line 158.

2020-09-29
 * Fulltext searches below 3 characters are off limits unless you change innodb_ft_min_token_size, which isn't always possible or desirable. Therefore wing generated classes now add a non-fulltext index in addition to the fulltext one so that you can do substring searches on that as well.

2020-09-28
 * Fixed: When a captcha answer is 0 it always fails.
 * Added better sorting of fulltext fields for generated rest classes.
 * Updated trends page to use bootstrap vue components instead of flatpickr.
 * Added CSV export to trends page.

2020-09-25