@@ -161,6 +161,20 @@ Add a DOM id to the control. Optional. Will be autogenerated if not set.
 =back
 
 
+=head2 percent-from-decimal
+
+A field that displays a decimal value as a whole percent.
+
+    <percent-from-decimal @change="associate.save('share_percent')" v-model="associate.properties.share_percent"></percent-from-decimal>
+
+=over
+
+=item v-model
+
+The property you'd like you keep up to date in your data model.
+
+=back
+
 
 =head2 toggle
 
