@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2020-10-12
+ * Added percent-from-decimal component to wing.vue.js.
+
 2020-10-09
  * Exposed "scroll_to_id" prop on wing-pagination component. Pagination defaults to scrolling up to "app". If you want something else specify it here.
  * Minor refactoring of ideas system.
